Finally fixed docker-compose up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,11 @@ models:
     external_links:
       -  mysql:db
     volumes:
-      - .:/app
+      - ./:/app
     ports:
       - "8001:8000"
     command: >
-        bash -c "cd beerDelivery && python manage.py makemigrations && python3 manage.py migrate
-        && python manage.py loaddata db.json
-        && mod_wsgi-express start-server --working-directory ./app/beerDelivery --reload-on-changes ./app/beerDelivery/beerDelivery/beerDelivery/wsgi.py"
-    tty: true
-
+        bash -c "python /app/beerDelivery/manage.py makemigrations 
+        && python /app/beerDelivery/manage.py migrate
+        && python /app/beerDelivery/manage.py loaddata /app/beerDelivery/db.json && pwd
+        && mod_wsgi-express start-server --working-directory /app/beerDelivery --reload-on-changes /app/beerDelivery/beerDelivery/wsgi.py"
