--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,29 @@ models:
         bash -c "python /app/beerDelivery/manage.py makemigrations 
         && python /app/beerDelivery/manage.py makemigrations myapp
         && python /app/beerDelivery/manage.py migrate
-        && python /app/beerDelivery/manage.py loaddata /app/beerDelivery/db.json && pwd
+        && python /app/beerDelivery/manage.py loaddata /app/beerDelivery/db.json
         && mod_wsgi-express start-server --working-directory /app/beerDelivery --reload-on-changes /app/beerDelivery/beerDelivery/wsgi.py"
+
+exp:
+   image: tp33/django
+   links:
+      - models:models-api
+   ports:
+      - "8002:8000"
+   volumes:
+      - ./:/app
+   command: >
+        bash -c "ls /app
+        && mod_wsgi-express start-server --working-directory /app/exp --reload-on-changes /app/exp/exp/wsgi.py"
+
+web:
+   image: tp33/django
+   links:
+      - exp:exp-api
+   ports:
+      - "8003:8000"
+   volumes:
+      - ./:/app
+   command: >
+        bash -c "ls
+        && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes /app/web/web/wsgi.py"
