--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ models:
         && python /app/beerDelivery/manage.py makemigrations 
         && python /app/beerDelivery/manage.py makemigrations myapp
         && python /app/beerDelivery/manage.py migrate
+        && python /app/beerDelivery/manage.py loaddata /app/beerDelivery/db.json
         && mod_wsgi-express start-server --working-directory /app/beerDelivery --reload-on-changes /app/beerDelivery/beerDelivery/wsgi.py"
 
 exp:
