--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,4 +61,6 @@ batch:
    links:
       - kafka:kafka
       - es:es
-   command: bash -c "python script.py"
+   command: > 
+          bash -c "python script.py
+          && python script2.py"
