Added search person and cleaned up some other stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,5 +62,5 @@ batch:
       - kafka:kafka
       - es:es
    command: >
-          bash -c "python script.py & python script2.py"
+          bash -c "python script.py & python script2.py & python script3.py"
 
