--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 install:
   - pip install docker-compose
   - docker pull mysql:5.7.14
+  - mkdir ~/cs4501
   - mkdir ~/cs4501/db
   - >
     docker run --name mysql -d -e MYSQL\_ROOT\_PASSWORD='$3cureUS' -v ~/cs4501/db:/var/lib/mysql  mysql:5.7.14
