--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ install:
   - >
     docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
     mysql -uroot -p'$3cureUS' -h db
-    create user 'www'@'%' identified by '$3cureUS';
-    create database cs4501 character set utf8;
-    grant all on cs4501.* to 'www'@'%';
+    CREATE USER 'www'@'%' IDENTIFIED BY '$3cureUS';
+    CREATE DATABASE cs4501 CHARACTER SET utf8;
+    GRANT ALL ON cs4501.* TO 'www'@'%';
 
 before_script:
   - docker-compose up -d
