--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,12 @@ install:
   - >
     docker run --name mysql -d -e MYSQL\_ROOT\_PASSWORD='$3cureUS' -v ~/cs4501/db:/var/lib/mysql  mysql:5.7.14
   - sleep 5
-  - docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
-  - mysql -uroot -p'$3cureUS' -h db
-  - CREATE USER 'www'@'%' IDENTIFIED BY '$3cureUS';
-  - CREATE DATABASE cs4501 CHARACTER SET utf8;
-  - GRANT ALL ON cs4501.* TO 'www'@'%';
+  - >
+    docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
+    mysql -uroot -p'$3cureUS' -h db
+    "CREATE USER 'www'@'%' IDENTIFIED BY '$3cureUS';
+    CREATE DATABASE cs4501 CHARACTER SET utf8;
+    GRANT ALL ON cs4501.* TO 'www'@'%';"
 
 before_script:
   - docker-compose up -d
