--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install:
   - mkdir ~/cs4501/db
   - >
     docker run --name mysql -d -e MYSQL\_ROOT\_PASSWORD='$3cureUS' -v ~/cs4501/db:/var/lib/mysql  mysql:5.7.14
-  - sleep 5
+  - docker start mysql
+  - sleep 10
   # - >
   #   docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
   #   mysql -uroot -p'$3cureUS' -h db
