--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ install:
     docker run --name mysql -d -e MYSQL\_ROOT\_PASSWORD='$3cureUS' -v ~/cs4501/db:/var/lib/mysql  mysql:5.7.14
   - docker start mysql
   - sleep 10
-  # - >
-  #   docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
-  #   mysql -uroot -p'$3cureUS' -h db
-  #   "CREATE DATABASE cs4501 CHARACTER SET utf8;
-  #   CREATE USER 'www'@'%' IDENTIFIED BY '\$3cureUS';
-  #   GRANT ALL PRIVILEGES ON cs4501.* TO 'www'@'%';"
+  - >
+    docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
+    mysql -uroot -p'$3cureUS' -h db
+    "CREATE DATABASE cs4501 CHARACTER SET utf8;
+    CREATE USER 'www'@'%' IDENTIFIED BY '\$3cureUS';
+    GRANT ALL PRIVILEGES ON cs4501.* TO 'www'@'%';"
 
 before_script:
   - docker-compose up -d
