--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ install:
   - docker start mysql
   - sleep 10
   - >
-    docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14 bash
-    mysql -uroot -p'$3cureUS' -h db
+    docker run -it --name mysql-cmdline --link mysql:db mysql:5.7.14
+    mysql -uroot -p'$3cureUS' -h db -v -e
     "CREATE DATABASE cs4501 CHARACTER SET utf8;
     CREATE USER 'www'@'%' IDENTIFIED BY '\$3cureUS';
     GRANT ALL PRIVILEGES ON cs4501.* TO 'www'@'%';"
