--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,18 @@ web:
         bash -c "pip install requests
         && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes /app/web/web/wsgi.py"
 
+web_2:
+   image: tp33/django
+   links:
+      - exp:exp-api
+   ports:
+      - "8004:8000"
+   volumes:
+      - ./:/app
+   command: >
+        bash -c "pip install requests
+        && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes /app/web/web/wsgi.py"
+
 kafka:
    image: spotify/kafka
    container_name: kafka
@@ -64,4 +76,15 @@ batch:
       - es:es
    command: >
           bash -c "python script.py & python script2.py & python script3.py"
+
+haproxy_load_balance:
+    image: ntuz/my-haproxy
+    container_name: haproxy_load_balance
+    volumes:
+        - ./haproxy:/app
+    links:
+        - web:web
+        - web_2:web_2
+    ports:
+        - "80:80"
 
