--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,12 @@ install:
 
 before_script:
   - docker-compose up -d
+  - sleep 15
   - docker ps -a
   - docker start beerdelivery_models_1
 
 script:
-  - docker exec beerdelivery_models_1 bash -c "pip install requests && cd beerDelivery && python manage.py test && cd .. && cd app/selenium/ && ls && pip install selenium==2.48 && python tests.py"
+  - docker exec beerdelivery_models_1 bash -c "cd app/selenium/ && pip install selenium==2.48 && python tests.py && cd .. && cd .. && pip install requests && cd beerDelivery && python manage.py test"
 
 after_script:
   - docker-compose down
