--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ before_script:
   - docker start beerdelivery_models_1
 
 script:
-  - docker exec beerdelivery_models_1 bash -c "cd app/selenium/ && pip install selenium==2.48 && python tests.py && cd .. && cd .. && pip install requests && cd beerDelivery && python manage.py test"
+  - docker exec beerdelivery_models_1 bash -c "pip install requests && cd beerDelivery && python manage.py test"
+  - docker exec beerdelivery_web_1 bash -c "cd app/selenium/ && pip install selenium==2.48 && python tests.py"
 
 after_script:
   - docker-compose down
