--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
 
 script:
   - docker exec beerdelivery_models_1 bash -c "pip install requests && cd beerDelivery && python manage.py test"
-  - docker exec selenium-test bash -c "cd app/selenium/ && pip install selenium==2.48 && pip install urllib3 && python tests.py"
+  - docker exec selenium-test bash -c "ls && cd app/ && pip install selenium==2.48 && pip install urllib3 && python tests.py"
 
 after_script:
   - docker-compose down
