Mysql with spark

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,8 @@ spark-master:
     - 8080:8080
   volumes:
     - ./batch:/app
+  external_links:
+    -  mysql:db
 
 spark-worker:
   image: gettyimages/spark
